--- a/Code/AppParqueadero/nbproject/project.properties
+++ b/Code/AppParqueadero/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AppParqueadero
 excludes=
+file.reference.gson-2.10.1.jar=..\\..\\..\\2558265-ADSO\\19 - Consumo API en JAVA\\03 - Libreria Gson\\gson-2.10.1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.gson-2.10.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
