--- a/Code/AppParqueadero/nbproject/project.properties
+++ b/Code/AppParqueadero/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AppParqueadero
 excludes=
 file.reference.gson-2.10.1.jar=..\\..\\..\\2558265-ADSO\\19 - Consumo API en JAVA\\03 - Libreria Gson\\gson-2.10.1.jar
+file.reference.gson-2.10.1.jar-1=/home/juan/Documentos/Oscar_GIT/2558265-ADSO/20 - PokeApi en JAVA/lib/gson-2.10.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.gson-2.10.1.jar}
+    ${file.reference.gson-2.10.1.jar}:\
+    ${file.reference.gson-2.10.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
