--- a/AppParqueadero/nbproject/private/private.properties
+++ b/AppParqueadero/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
-file.reference.gson-2.10.1.jar=C:\\Users\\NOSTROMO\\Desktop\\gson-2.8.2.jar
-user.properties.file=C:\\Users\\NOSTROMO\\AppData\\Roaming\\NetBeans\\19\\build.properties
+file.reference.gson-2.10.1.jar=C:\\Users\\INSTRUCTOR\\Desktop\\gson-2.10.1.jar
+user.properties.file=C:\\Users\\INSTRUCTOR\\AppData\\Roaming\\NetBeans\\17\\build.properties
