--- a/AppParqueadero/nbproject/project.properties
+++ b/AppParqueadero/nbproject/project.properties
@@ -34,12 +34,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AppParqueadero
 excludes=
 file.reference.gson-2.10.1.jar=..\\..\\..\\2558265-ADSO\\19 - Consumo API en JAVA\\03 - Libreria Gson\\gson-2.10.1.jar
+file.reference.gson-2.10.1.jar-1=..\\..\\2558265-ADSO\\19 - Consumo API en JAVA\\03 - Libreria Gson\\gson-2.10.1.jar
 file.reference.gson-2.8.2.jar=C:\\Users\\NOSTROMO\\Desktop\\gson-2.8.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.gson-2.10.1.jar}:\
-    ${file.reference.gson-2.8.2.jar}
+    ${file.reference.gson-2.8.2.jar}:\
+    ${file.reference.gson-2.10.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
