--- a/Code/AppParqueadero/nbproject/private/private.properties
+++ b/Code/AppParqueadero/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 file.reference.gson-2.10.1.jar=C:\\Users\\INSTRUCTOR\\Desktop\\gson-2.10.1.jar
-user.properties.file=C:\\Users\\INSTRUCTOR\\AppData\\Roaming\\NetBeans\\18\\build.properties
+user.properties.file=C:\\Users\\ramir\\AppData\\Roaming\\NetBeans\\18\\build.properties
