--- a/Code/AppParqueadero/nbproject/project.properties
+++ b/Code/AppParqueadero/nbproject/project.properties
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=AppParqueadero
-main.class=Main.MainVendedor
+main.class=Main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
