--- a/Code/AppParqueadero/nbproject/private/private.properties
+++ b/Code/AppParqueadero/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 file.reference.gson-2.10.1.jar=C:\\Users\\ramir\\OneDrive\\Escritorio\\gson-2.10.1.jar
-user.properties.file=/home/juan/snap/netbeans/84/build.properties
+user.properties.file=C:\\Users\\Camilo\\AppData\\Roaming\\NetBeans\\16\\build.properties
