--- a/Code/AppParqueadero/nbproject/private/private.properties
+++ b/Code/AppParqueadero/nbproject/private/private.properties
@@ -1,3 +1,4 @@
 compile.on.save=true
-file.reference.gson-2.10.1.jar=C:\\Users\\ramir\\OneDrive\\Escritorio\\gson-2.10.1.jar
-user.properties.file=C:\\Users\\ramir\\AppData\\Roaming\\NetBeans\\18\\build.properties
+file.reference.gson-2.10.1.jar=C:\\Users\\INSTRUCTOR\\Desktop\\gson-2.10.1.jar
+file.reference.gson-2.10.1.jar-2=C:\\Users\\INSTRUCTOR\\Desktop\\gson-2.10.1.jar
+user.properties.file=C:\\Users\\INSTRUCTOR\\AppData\\Roaming\\NetBeans\\17\\build.properties
