--- a/Code/AppParqueadero/nbproject/project.properties
+++ b/Code/AppParqueadero/nbproject/project.properties
@@ -36,14 +36,18 @@ excludes=
 file.reference.gson-2.10.1.jar=..\\..\\..\\2558265-ADSO\\19 - Consumo API en JAVA\\03 - Libreria Gson\\gson-2.10.1.jar
 file.reference.gson-2.10.1.jar-1=C:\\Users\\ramir\\OneDrive\\Escritorio\\gson-2.10.1.jar
 file.reference.gson-2.10.1.jar-2=/home/juan/Documentos/Oscar_GIT/2558265-ADSO/20 - PokeApi en JAVA/lib/gson-2.10.1.jar
-file.reference.gson-2.10.1.jar-3=..\\..\\..\\2558265-ADSO\\19 - Consumo API en JAVA\\03 - Libreria Gson\\gson-2.10.1.jar
+file.reference.gson-2.10.1.jar-3=..\\..\\..\\..\\2558265-ADSO\\19 - Consumo API en JAVA\\03 - Libreria Gson\\gson-2.10.1.jar
+file.reference.gson-2.10.1.jar-4=..\\..\\..\\2558265-ADSO\\19 - Consumo API en JAVA\\03 - Libreria Gson\\gson-2.10.1.jar
+file.reference.gson-2.10.1.jar-5=/home/juan/Documentos/Oscar_GIT/2558265-ADSO/20 - PokeApi en JAVA/lib/gson-2.10.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.gson-2.10.1.jar}:\
     ${file.reference.gson-2.10.1.jar-1}:\
     ${file.reference.gson-2.10.1.jar-2}:\
-    ${file.reference.gson-2.10.1.jar-3}
+    ${file.reference.gson-2.10.1.jar-3}:\
+    ${file.reference.gson-2.10.1.jar-4}:\
+    ${file.reference.gson-2.10.1.jar-5}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -79,7 +83,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=AppParqueadero
-main.class=Main.Main
+main.class=Main.Login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
